--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,16 @@
 body {
-  background: #333;
+  background: darkslategrey;
   color: whitesmoke;
 }
 
 .music-section .track {
-  border: 2px solid red;
+  border: 2px solid white;
+  width: 300px;
   margin: 1em;
+  padding: 1em;
+}
+
+.music-section .track img {
+  width: 100%;
 }
 /*# sourceMappingURL=styles.css.map */
