--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,5 @@
 body{
-    background: darkslategrey;
+    background: rgba(0, 0, 0, 0.906);
     color: whitesmoke;
 }
 
@@ -7,10 +7,12 @@ body{
     .track{
         border: 2px solid white;
         width: 300px;
+        border-radius: 12px;
         margin: 1em;
         padding: 1em;
         img{
             width: 100%;
+            border-radius: 12px;
         }
     }
 
